add feature save as redactor content as PDF

--- a/audit-app/src/components/TextRedactor/TextRedactor.css
+++ b/audit-app/src/components/TextRedactor/TextRedactor.css
@@ -50,3 +50,10 @@
 .ql-editor {
   min-height: 712px;
 }
+
+.savePDF {
+  padding: 10px;
+  background-color: #DECF9B;
+  margin-top: 29px;
+  border-radius: 20px !important;
+}
