add react-quill and editorjs redactor to compare

--- a/audit-app/src/components/TextRedactor/TextRedactor.css
+++ b/audit-app/src/components/TextRedactor/TextRedactor.css
@@ -1,59 +1,5 @@
-.textRedactor {
-  width: 1100px;
-  margin: 76px 19px 0px 24px;
-  height: 744px;
-}
-
-.ql-font-arial,
-.ql-font span[data-value="arial"]::before {
-  font-family: Arial, sans-serif;
-}
-.ql-font-comic-sans,
-.ql-font span[data-value="comic-sans"]::before {
-  font-family: "Comic Sans MS", cursive, sans-serif;
-}
-.ql-font-courier-new,
-.ql-font span[data-value="courier-new"]::before {
-  font-family: "Courier New";
-}
-.ql-font-georgia,
-.ql-font span[data-value="georgia"]::before {
-  font-family: Georgia, serif;
-}
-.ql-font-helvetica,
-.ql-font span[data-value="helvetica"]::before {
-  font-family: Helvetica, sans-serif;
-}
-.ql-font-lucida,
-.ql-font span[data-value="lucida"]::before {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-}
-
-/* Set content for sizes */
-.ql-size-extra-small,
-.ql-size span[data-value="extra-small"]::before {
-  font-size: 13px !important;
-}
-.ql-size-small,
-.ql-size span[data-value="small"]::before {
-  font-size: 14px !important;
-}
-.ql-size-medium,
-.ql-size span[data-value="medium"]::before {
-  font-size: 18px !important;
-}
-.ql-size-large,
-.ql-size span[data-value="large"]::before {
-  font-size: 20px !important;
-}
-
-.ql-editor {
-  min-height: 712px;
-}
-
-.savePDF {
-  padding: 10px;
-  background-color: #DECF9B;
-  margin-top: 29px;
-  border-radius: 20px !important;
+#editorjs {
+  background-color: bisque;
+  width: 1212px;
+  min-height: 700px;
 }
