--- a/AuditApp/AuditApp.Api/Extranet/src/components/template-sidebar/switcher-list.css
+++ b/AuditApp/AuditApp.Api/Extranet/src/components/template-sidebar/switcher-list.css
@@ -1,20 +1,17 @@
-.main-item-wrap{
+.switcher-list {
   display: flex;
   flex-direction: column;
+  margin-top: 48px;
 }
 
-.switch-item p{
-  margin-top: -4px;
+.switcher-list p {
   font-family: 'Montserrat', sans-serif;
 }
 
-.main-item {
+.template-item {
+  margin-left: 26px;
   width: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-
-.sub-item {
-  margin: 10px 0 10px 0;
 }
