Добавил пример использования redux

--- a/AuditApp/AuditApp.Api/Frontend/src/components/text-redactor/text-redactor.css
+++ b/AuditApp/AuditApp.Api/Frontend/src/components/text-redactor/text-redactor.css
@@ -29,3 +29,10 @@
   width: 367px;
   justify-content: space-between;
 }
+
+.image-tool__caption,
+.ce-popover-item[data-item-name="withBorder"],
+.ce-popover-item[data-item-name="withBackground"],
+.ce-popover-item[data-item-name="stretched"] {
+display: none;
+}
