--- a/AuditApp/AuditApp.Api/Frontend/src/components/navbar/Navbar.css
+++ b/AuditApp/AuditApp.Api/Frontend/src/components/navbar/Navbar.css
@@ -1,5 +1,4 @@
 .header {
-  min-width: 1920px;
   height: 90px;
   background-color: #FFFFFF;
   display: flex;
@@ -19,7 +18,7 @@ li {
   cursor: pointer;
 }
 
-.first_li {
+.first-li {
   margin-right: 50px;
 }
 
@@ -32,14 +31,14 @@ li {
   color: #9196A1;
 }
 
-.AvatarImg {
+.avatar-img {
   width: 50px;
   height: 50px;
   margin: 20px 22px 0px 0px;
   cursor: pointer;
 }
 
-.NavList {
+.nav-list {
   display: flex;
   flex-direction: column;
 }
