Feature/frontend login and crudoperations (#20)
* убрал неиспользуемые файлы на бэке

* Добавил юзкейс получения аудитов пользователя

* Отрефакторил фронт и бэк

* Подвравил маппер AuditMap

* Подправил текст возвращемой ошибки при валидации пользователя

* Убрал поле типАудита в методе в мапе AuditMap

* Добавил функцию пепевода DateTime в строковый формат  на фронте. Маплю данные с бэка на фронт

* Добавил авторизацию и сделал защищенные и открытые роуты в урле

* Добавил табличку с пагинацией и поиском без css. Сделал в редакторе word-wrap break wordDDD

* Добавил рабочую таблицу)

* Доработал таблицу. Локализовал ее. Добавил попап для выхода из акаунта. Добавил попав - перейти к созданию аудита

* Добавил круд операции к аудитам

* Поменял кнопки Да, Нет местами. Исправил пунктационную ошибку

* Поправил баг с маршрутизатором

* поправил замечания по пулл реквесту, кроме пагинации и прикрутки автора к аудиту

* Исправил баг с удалением

* правки

--- a/AuditApp/AuditApp.Api/Frontend/src/pages/layout/layout.css
+++ b/AuditApp/AuditApp.Api/Frontend/src/pages/layout/layout.css
@@ -1,5 +1,4 @@
 .header {
-  min-width: 1920px;
   height: 90px;
   background-color: #FFFFFF;
   display: flex;
@@ -8,7 +7,7 @@
 
 ul {
   list-style-type: none;
-  padding: 25px 0 0 54px;
+  padding: 25px 0 0 0px;
   display: flex;
 }
 
@@ -48,3 +47,8 @@ li {
   color: #414c59;
   text-decoration: none;
 }
+
+.MuiPaper-elevation8{
+  width: 150px;
+  height: 93px;
+  }
